@@ -1,3 +1,8 @@
+2002-04-04  Michal Ludvig  <mludvig@suse.cz>
+
+	* x86-64-linux-nat.c (child_xfer_memory): x86-64 ptrace() ABI 
+	change sync with glibc.
+
 2002-04-01  Daniel Jacobowitz  <drow@mvista.com>
 
 	* rs6000-tdep.c: Change #include of "bfd/libcoff.h"
